force-app/main/default/objects/LPCR_LienCrecheOpportunite__c/LPCR_LienCrecheOpportunite__c.object-meta.xml
<CustomObject>
    <label>Lien Crèche Opportunité</label>
    <nameField>
        <displayFormat>LCO-{0000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liens Crèches-Opportunités</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>