force-app/main/default/objects/LPCR_LienCrecheOpportunite__c/fields/LPCR_Creche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Creche__c</fullName>
    <label>Crèche</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunités liées à la crèche</relationshipLabel>
    <relationshipName>OpportunitesCreche</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>