force-app/main/default/objects/LPCR_LienCrecheOpportunite__c/fields/LPCR_DemandeOption__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DemandeOption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Coché par le commercial si demande d&#39;option</description>
    <label>Demande d&#39;option</label>
    <type>Checkbox</type>
</CustomField>