force-app/main/default/objects/LPCR_LienCrecheOpportunite__c/fields/LPCR_Opportunite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Opportunite__c</fullName>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Crèche(s) de l&apos;Opportunité</relationshipLabel>
    <relationshipName>CrechesOpportunite</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>