force-app/main/default/objects/LPCR_LienCrecheOpportunite__c/fields/Tech_Opportunite_Fermee__c.field-meta.xml
<CustomField>
    <fullName>Tech_Opportunite_Fermee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilisé dans flox pour le rollup de nombre d&apos;option sur la creche</description>
    <label>Opportunité fermée</label>
    <type>Checkbox</type>
</CustomField>